# tg-shop-webapp

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  bot.py  config.py  database.py  main.py  models.py  products.json  pyproject.toml  schemas.py
frontend/: Dockerfile  index.html  nginx.conf  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Cart.jsx  Orders.jsx  ProductDetail.jsx  ProductImage.jsx
frontend/src/utils/: formatters.js
